--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^18.2.0",
     "@angular/common": "^18.2.0",
     "@angular/compiler": "^18.2.0",
     "@angular/core": "^18.2.0",
@@ -21,8 +20,15 @@
     "@angular/platform-server": "^18.2.0",
     "@angular/router": "^18.2.0",
     "@angular/ssr": "^18.2.8",
+    "@sweetalert2/ngx-sweetalert2": "^12.4.0",
+    "bootstrap": "^5.3.3",
     "express": "^4.18.2",
+    "hls.js": "^1.5.16",
+    "localforage": "^1.10.0",
+    "ngx-device-detector": "^8.0.0",
     "rxjs": "~7.8.0",
+    "socket.io-client": "^4.8.0",
+    "sweetalert2": "^11.14.3",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
   },
