--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "hls.js": "^1.5.16",
     "localforage": "^1.10.0",
     "ngx-device-detector": "^8.0.0",
+    "primeflex": "^3.3.1",
+    "primeicons": "^7.0.0",
+    "primeng": "^17.18.11",
     "rxjs": "~7.8.0",
     "socket.io-client": "^4.8.0",
     "sweetalert2": "^11.14.3",
